[package]
name = "ofdm"
version = "0.0.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optargs = "0.1.1"
thiserror = "1.0.24"
anyhow = "1.0.39"
tap = "1.0.1"
lipsum = "0.7.0"
uhd = { path = "../uhd-rust/uhd" }
argh = "0.1.4"
# uhd = "0.1.1"

log = "0.4.13"
fern = { version = "0.6.0", features = ["colored"] }
rustfft = "6.0.0"
once_cell = "1.7.2"
rand = "0.8.3"
colored = "2.0.0"


textplots = { git = "https://github.com/jkelleyrtp/textplots-rs", branch = "jk/ymaxymin" }
tui-template = { git = "https://github.com/jkelleyrtp/tui-builder" }
tui = { version = "0.15.0", features = ["crossterm"] }
crossterm = "0.19.0"


plotly = { git = "https://github.com/jkelleyrtp/plotly/", branch = "jk/verbump" }
cubic_spline = "1.0.0"
reed-solomon = "0.2.1"

minifb = "0.19.3"
image = "0.23.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
fux_kdtree = "0.2.0"
brotli = "3.3.0"
arrayfire = { git = "https://github.com/jkelleyrtp/arrayfire-rust" }
# arrayfire = "3.8.0"
num = "0.4.0"
chrono = "0.4.19"
bincode = "1.3.3"
npy = "0.4.0"
# pyo3 = "0.13.2"
# numpy = { git = "https://github.com/jkelleyrtp/rust-numpy", branch = "jk/verbump" }
# numpy = "0.13.1"

[profile.dev]
debug = 0
opt-level = 3 # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.


[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
